warm-lead-generation/salesforce_metadata/objects/NBRS_Calculation__e.object
<CustomObject>
    <fullName>NBRS_Calculation__e</fullName>
    <label>NBRS Calculation</label>
    <pluralLabel>NBRS Calculations</pluralLabel>

    <fields>
        <fullName>Lead_ID__c</fullName>
        <label>Lead ID</label>
        <description>Salesforce Lead ID</description>
        <type>Text</type>
        <length>18</length>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <description>Company name</description>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>NBRS_Score__c</fullName>
        <label>NBRS Score</label>
        <description>Calculated NBRS score</description>
        <type>Number</type>
        <precision>5</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>NBRS_Tier__c</fullName>
        <label>NBRS Tier</label>
        <description>Tier classification</description>
        <type>Text</type>
        <length>10</length>
    </fields>
    <fields>
        <fullName>Brand_Affinity_Score__c</fullName>
        <label>Brand Affinity Score</label>
        <description>Brand affinity score</description>
        <type>Number</type>
        <precision>5</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Market_Positioning_Score__c</fullName>
        <label>Market Positioning Score</label>
        <description>Market positioning score</description>
        <type>Number</type>
        <precision>5</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Digital_Presence_Score__c</fullName>
        <label>Digital Presence Score</label>
        <description>Digital presence score</description>
        <type>Number</type>
        <precision>5</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Priority_Rank__c</fullName>
        <label>Priority Rank</label>
        <description>Priority ranking</description>
        <type>Number</type>
        <precision>5</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Calculated_At__c</fullName>
        <label>Calculated At</label>
        <description>Calculation timestamp</description>
        <type>DateTime</type>
    </fields>
</CustomObject>